# routes/api.php
@@ -19,7 +19,7 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
 });
 
 Route::resource('motivation_program', 'ImproveProgram');
-Route::resource('scenario', 'BotPrototype');
+Route::resource('conversation_scenario', 'BotPrototype');
 Route::resource('players_of_providers', 'PlayerController');
 Route::get('players_of_providers/{id}/motivation_program', 'PlayerController@motivationSchedule');
 Route::post('players_of_providers/attach_program', 'ImproveProgram@attach');
